tests/ui/closures/add_semicolon_non_block_closure.stderr
error[E0308]: mismatched types
  --> $DIR/add_semicolon_non_block_closure.rs:8:12
   |
LL | fn main() {
   |          - expected `()` because of default return type
LL |     foo(|| bar())
   |            ^^^^^ expected `()`, found `i32`
   |
note: the function bar is defined here
  --> $DIR/add_semicolon_non_block_closure.rs:3:1
   |
LL | fn bar() -> i32 {
   | ^^^^^^^^^^^^^^^
help: consider using a semicolon here
   |
LL |     foo(|| { bar(); })
   |            +      +++
help: consider changing bar's return type
   |
LL | fn bar() -> () {
   |             ~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
